Task instance Java/128