@@ -3,43 +3,35 @@ import java.lang.*;
 
 class Solution {
     /**
-    You are given two intervals,
-    where each interval is a pair of integers. For example, interval = (start, end) = (1, 2).
-    The given intervals are closed which means that the interval (start, end)
-    includes both start and end.
-    For each given interval, it is assumed that its start is less or equal its end.
-    Your task is to determine whether the length of intersection of these two
-    intervals is a prime number.
-    Example, the intersection of the intervals (1, 3), (2, 4) is (2, 3)
-    which its length is 1, which not a prime number.
-    If the length of the intersection is a prime number, return "YES",
-    otherwise, return "NO".
-    If the two intervals don't intersect, return "NO".
+    You are given an array arr of integers and you need to return
+    sum of magnitudes of integers multiplied by product of all signs
+    of each number in the array, represented by 1, -1 or 0.
+    Note: return None for empty arr.
 
-
-    [input/output] samples:
-    intersection((1, 2), (2, 3)) ==> "NO"
-    intersection((-1, 1), (0, 4)) ==> "NO"
-    intersection((-3, -1), (-5, 5)) ==> "YES"
+    Example:
+    >>> prodSigns(Arrays.asList(1, 2, 2, -4)) == -9
+    >>> prodSigns(Arrays.asList(0, 1)) == 0
+    >>> prodSigns(Arrays.asList()) == None
      */
-    public String intersection(List<Integer> interval1, List<Integer> interval2) {
+    public Optional<Integer> prodSigns(List<Integer> arr) {
 
-        int l = Math.max(interval1.get(0), interval2.get(0));
-        int r = Math.min(interval1.get(1), interval2.get(1));
-        int length = r - l;
-        if (length == 1) {
-            return "NO";
+        if (arr.size() == 0) {
+            return Optional.empty();
         }
-        return "YES";
+        if (arr.contains(0)) {
+            return Optional.of(0);
+        }
+        int prod = (int) (-2 * (arr.stream().filter(p -> p < 0).count() % 2) + 1 * 2);
+        return Optional.of(prod * (arr.stream().map(Math::abs).reduce(Integer::sum)).get());
     }
 }
 public class Main {
     public static void main(String[] args) {
         Solution s = new Solution();
         List<Boolean> correct = Arrays.asList(
-                Objects.equals(s.intersection(Arrays.asList(1, 2), Arrays.asList(2, 3)), "NO" ),
-                Objects.equals(s.intersection(Arrays.asList(-1, 1), Arrays.asList(0, 4)), "NO" ),
-                Objects.equals(s.intersection(Arrays.asList(-3, -1), Arrays.asList(-5, 5)), "YES" )
+                s.prodSigns(Arrays.asList(1, 2, 2, -4)).get() == -9,
+                s.prodSigns(Arrays.asList(0, 1)).get() == 0,
+                s.prodSigns(List.of()).isEmpty()
         );
         if (correct.contains(false)) {
             throw new AssertionError();
